--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
+    "react-viewerjs": "^0.1.9",
     "reactstrap": "^8.7.1",
     "sweetalert-react": "^0.4.11"
   },
