inserccion de cita

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=https://glacial-citadel-57666.herokuapp.com/
+REACT_APP_BACKEND_URL=https://la-terraza-de-frida.herokuapp.com/
