--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.10.8",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@fullcalendar/daygrid": "^5.7.0",
+    "@fullcalendar/react": "^5.7.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "jquery": "^1.9.1",
+    "jquery": "^1.12.4",
+    "mdbreact": "^5.0.2",
     "react": "^16.13.1",
     "react-bootstrap-validation": "^0.1.11",
+    "react-datetime": "^3.0.4",
     "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
+    "react-modal": "^3.13.1",
     "react-overlay-trigger": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
