avance reporte ganancias

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "file-saver": "^2.0.5",
     "jquery": "^1.12.4",
     "mdbreact": "^5.0.2",
     "react": "^16.13.1",
@@ -28,6 +29,7 @@
     "react-overlay-trigger": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-to-pdf": "0.0.14",
     "react-transition-group": "^4.4.1",
     "react-viewerjs": "^0.1.9",
     "reactstrap": "^8.7.1",
